--- a/package.json
+++ b/package.json
@@ -2,20 +2,82 @@
   "name": "@donohub/source",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "serve:all": "nx run-many -t serve --projects api,client"
+  },
   "private": true,
-  "dependencies": {},
   "devDependencies": {
+    "@eslint/js": "^9.22.0",
+    "@nestjs/schematics": "^11.0.2",
+    "@nestjs/testing": "^11.0.11",
+    "@nx/eslint": "20.5.0",
+    "@nx/eslint-plugin": "20.5.0",
     "@nx/js": "20.5.0",
-    "@swc-node/register": "~1.9.1",
-    "@swc/core": "~1.5.7",
-    "@swc/helpers": "~0.5.11",
+    "@nx/nest": "^20.5.0",
+    "@nx/node": "20.5.0",
+    "@nx/react": "^20.5.0",
+    "@nx/vite": "20.5.0",
+    "@nx/web": "20.5.0",
+    "@nx/webpack": "20.5.0",
+    "@swc-node/register": "~1.10.9",
+    "@swc/cli": "~0.6.0",
+    "@swc/core": "~1.11.8",
+    "@swc/helpers": "~0.5.15",
+    "@types/node": "22.13.10",
+    "@types/react": "19.0.10",
+    "@types/react-dom": "19.0.4",
+    "@vitejs/plugin-react": "^4.3.4",
+    "@vitest/ui": "^3.0.8",
+    "eslint": "^9.22.0",
+    "eslint-config-prettier": "^10.1.1",
+    "eslint-plugin-import": "2.31.0",
+    "eslint-plugin-jsx-a11y": "6.10.2",
+    "eslint-plugin-react": "7.37.4",
+    "eslint-plugin-react-hooks": "5.2.0",
+    "jiti": "2.4.2",
+    "jsdom": "~26.0.0",
+    "jsonc-eslint-parser": "^2.4.0",
     "nx": "20.5.0",
-    "prettier": "^2.6.2",
-    "tslib": "^2.3.0",
-    "typescript": "~5.7.2"
+    "prettier": "^3.5.3",
+    "sass": "^1.85.1",
+    "tslib": "^2.8.1",
+    "typescript": "~5.8.2",
+    "typescript-eslint": "^8.26.0",
+    "vite": "^6.2.1",
+    "vitest": "^3.0.8",
+    "webpack-cli": "^6.0.1"
   },
   "workspaces": [
-    "packages/*"
-  ]
+    "packages/*",
+    "apps/*"
+  ],
+  "dependencies": {
+    "@anatine/zod-nestjs": "^2.0.10",
+    "@anatine/zod-openapi": "^2.2.7",
+    "@clerk/backend": "^1.25.1",
+    "@clerk/clerk-react": "^5.24.1",
+    "@nestjs/common": "^11.0.11",
+    "@nestjs/config": "^4.0.1",
+    "@nestjs/core": "^11.0.11",
+    "@nestjs/passport": "^11.0.5",
+    "@nestjs/platform-express": "^11.0.11",
+    "@nestjs/swagger": "^11.0.6",
+    "@scalar/nestjs-api-reference": "^0.3.189",
+    "@tailwindcss/vite": "^4.0.12",
+    "@tanstack/react-query": "^5.67.2",
+    "axios": "^1.8.2",
+    "express": "^4.21.2",
+    "nest-winston": "^1.10.2",
+    "openapi3-ts": "^4.4.0",
+    "passport": "^0.7.0",
+    "passport-custom": "^1.1.1",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-router-dom": "7.3.0",
+    "reflect-metadata": "^0.2.2",
+    "rxjs": "^7.8.2",
+    "tailwindcss": "^4.0.12",
+    "winston": "^3.17.0",
+    "zod": "^3.24.2"
+  }
 }
