--- a/packages/shared/tsconfig.lib.json
+++ b/packages/shared/tsconfig.lib.json
@@ -8,6 +8,8 @@
     "emitDeclarationOnly": false,
     "forceConsistentCasingInFileNames": true,
     "types": ["node"],
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
   },
   "include": ["src/**/*.ts"],
   "references": []
