--- a/package.json
+++ b/package.json
@@ -56,6 +56,8 @@
     "@anatine/zod-openapi": "^2.2.7",
     "@clerk/backend": "^1.25.1",
     "@clerk/clerk-react": "^5.24.1",
+    "@clerk/localizations": "^3.11.1",
+    "@clerk/themes": "^2.2.20",
     "@nestjs/common": "^11.0.11",
     "@nestjs/config": "^4.0.1",
     "@nestjs/core": "^11.0.11",
@@ -67,12 +69,16 @@
     "@tanstack/react-query": "^5.67.2",
     "axios": "^1.8.2",
     "express": "^4.21.2",
+    "i18next": "^24.2.2",
+    "i18next-browser-languagedetector": "^8.0.4",
+    "i18next-http-backend": "^3.0.2",
     "nest-winston": "^1.10.2",
     "openapi3-ts": "^4.4.0",
     "passport": "^0.7.0",
     "passport-custom": "^1.1.1",
     "react": "19.0.0",
     "react-dom": "19.0.0",
+    "react-i18next": "^15.4.1",
     "react-router-dom": "7.3.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.2",
