--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   "private": true,
   "devDependencies": {
     "@eslint/js": "^9.22.0",
-    "@nestjs/schematics": "^11.0.2",
-    "@nestjs/testing": "^11.0.11",
+    "@nestjs/schematics": "^10.2.3",
+    "@nestjs/testing": "^10.4.15",
     "@nx/eslint": "20.5.0",
     "@nx/eslint-plugin": "20.5.0",
     "@nx/js": "20.5.0",
@@ -29,7 +29,7 @@
     "@vitejs/plugin-react": "^4.3.4",
     "@vitest/ui": "^3.0.8",
     "eslint": "^9.22.0",
-    "eslint-config-prettier": "^10.1.1",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "2.31.0",
     "eslint-plugin-jsx-a11y": "6.10.2",
     "eslint-plugin-react": "7.37.4",
@@ -58,20 +58,23 @@
     "@clerk/clerk-react": "^5.24.1",
     "@clerk/localizations": "^3.11.1",
     "@clerk/themes": "^2.2.20",
-    "@nestjs/common": "^11.0.11",
-    "@nestjs/config": "^4.0.1",
-    "@nestjs/core": "^11.0.11",
-    "@nestjs/passport": "^11.0.5",
-    "@nestjs/platform-express": "^11.0.11",
-    "@nestjs/swagger": "^11.0.6",
+    "@nestjs/common": "^10.4.15",
+    "@nestjs/config": "^3.3.0",
+    "@nestjs/core": "^10.4.15",
+    "@nestjs/passport": "^10.0.3",
+    "@nestjs/platform-express": "^10.4.15",
+    "@nestjs/swagger": "^7.4.2",
     "@scalar/nestjs-api-reference": "^0.3.189",
     "@tailwindcss/vite": "^4.0.12",
     "@tanstack/react-query": "^5.67.2",
     "axios": "^1.8.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "express": "^4.21.2",
     "i18next": "^24.2.2",
     "i18next-browser-languagedetector": "^8.0.4",
     "i18next-http-backend": "^3.0.2",
+    "lucide-react": "^0.482.0",
     "nest-winston": "^1.10.2",
     "openapi3-ts": "^4.4.0",
     "passport": "^0.7.0",
@@ -82,7 +85,9 @@
     "react-router-dom": "7.3.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.2",
+    "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.12",
+    "tailwindcss-animate": "^1.0.7",
     "winston": "^3.17.0",
     "zod": "^3.24.2"
   }
