--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -1,4 +1,10 @@
 {
+  "compilerOptions": {
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["./src/*"]
+    }
+  },
   "extends": "../../tsconfig.base.json",
   "files": [],
   "include": [],
