--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -2,8 +2,5 @@
   "name": "@donohub/client",
   "version": "0.0.1",
   "private": true,
-  "type": "module",
-  "dependencies": {
-    "@radix-ui/react-slot": "^1.1.2"
-  }
+  "type": "module"
 }
