--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "serve:all": "nx run-many -t serve --projects api,client"
+    "docker:api": "docker build -f api.Dockerfile . -t donohub-api",
+    "docker:client": "docker build -f client.Dockerfile . -t donohub-client"
   },
   "private": true,
   "devDependencies": {
@@ -67,6 +68,7 @@
     "@scalar/nestjs-api-reference": "^0.3.189",
     "@tailwindcss/vite": "^4.0.12",
     "@tanstack/react-query": "^5.67.2",
+    "@radix-ui/react-slot": "^1.1.2",
     "axios": "^1.8.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
