--- a/.dockerignore
+++ b/.dockerignore
@@ -1,5 +1,3 @@
-# See https://docs.github.com/en/get-started/getting-started-with-git/ignoring-files for more about ignoring files.
-
 # compiled output
 dist
 tmp
@@ -45,4 +43,5 @@ vite.config.*.timestamp*
 vitest.config.*.timestamp*
 
 **/.env
+*.Dockerfile
 docker-compose.yaml
