--- a/package.json
+++ b/package.json
@@ -65,10 +65,13 @@
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.4.15",
     "@nestjs/swagger": "^7.4.2",
+    "@nestjs/terminus": "^11.0.0",
+    "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-slot": "^1.1.2",
     "@scalar/nestjs-api-reference": "^0.3.189",
     "@tailwindcss/vite": "^4.0.12",
+    "@tanstack/react-form": "^1.0.5",
     "@tanstack/react-query": "^5.67.2",
-    "@radix-ui/react-slot": "^1.1.2",
     "axios": "^1.8.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
