--- a/apps/client/tsconfig.app.json
+++ b/apps/client/tsconfig.app.json
@@ -35,9 +35,5 @@
     "eslint.config.mjs"
   ],
   "include": ["src/**/*.js", "src/**/*.jsx", "src/**/*.ts", "src/**/*.tsx"],
-  "references": [
-    {
-      "path": "../../packages/shared/tsconfig.lib.json"
-    }
-  ]
+  "references": []
 }
