--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "@eslint/js": "^9.22.0",
     "@nestjs/schematics": "^10.2.3",
     "@nestjs/testing": "^10.4.15",
-    "@nx/eslint": "20.5.0",
-    "@nx/eslint-plugin": "20.5.0",
+    "@nx/eslint": "20.6.0",
+    "@nx/eslint-plugin": "20.6.0",
     "@nx/js": "20.5.0",
     "@nx/nest": "^20.5.0",
     "@nx/node": "20.5.0",
@@ -24,6 +24,8 @@
     "@swc/cli": "~0.6.0",
     "@swc/core": "~1.11.8",
     "@swc/helpers": "~0.5.15",
+    "@types/express": "^5.0.1",
+    "@types/multer": "^1.4.12",
     "@types/node": "22.13.10",
     "@types/react": "19.0.10",
     "@types/react-dom": "19.0.4",
@@ -52,6 +54,9 @@
     "packages/*",
     "apps/*"
   ],
+  "overrides": {
+    "whatwg-url": "^14.0.0"
+  },
   "dependencies": {
     "@anatine/zod-nestjs": "^2.0.10",
     "@anatine/zod-openapi": "^2.2.7",
@@ -62,6 +67,7 @@
     "@nestjs/common": "^10.4.15",
     "@nestjs/config": "^3.3.0",
     "@nestjs/core": "^10.4.15",
+    "@nestjs/event-emitter": "^3.0.1",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.4.15",
     "@nestjs/swagger": "^7.4.2",
@@ -69,6 +75,7 @@
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@scalar/nestjs-api-reference": "^0.3.189",
+    "@supabase/supabase-js": "^2.49.1",
     "@tailwindcss/vite": "^4.0.12",
     "@tanstack/react-form": "^1.0.5",
     "@tanstack/react-query": "^5.67.2",
@@ -80,10 +87,12 @@
     "i18next-browser-languagedetector": "^8.0.4",
     "i18next-http-backend": "^3.0.2",
     "lucide-react": "^0.482.0",
+    "multer": "^1.4.5-lts.2",
     "nest-winston": "^1.10.2",
     "openapi3-ts": "^4.4.0",
     "passport": "^0.7.0",
     "passport-custom": "^1.1.1",
+    "prisma": "^6.5.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-i18next": "^15.4.1",
