feat: home page

--- a/apps/client/tsconfig.json
+++ b/apps/client/tsconfig.json
@@ -9,6 +9,9 @@
   "include": [],
   "references": [
     {
+      "path": "../../packages/shared"
+    },
+    {
       "path": "./tsconfig.app.json"
     }
   ],
