--- a/package.json
+++ b/package.json
@@ -74,11 +74,13 @@
     "@nestjs/terminus": "^11.0.0",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.2",
+    "embla-carousel-react": "^8.6.0",
     "@scalar/nestjs-api-reference": "^0.3.189",
     "@supabase/supabase-js": "^2.49.1",
     "@tailwindcss/vite": "^4.0.12",
     "@tanstack/react-form": "^1.0.5",
     "@tanstack/react-query": "^5.67.2",
+    "@tanstack/react-query-devtools": "^5.73.3",
     "axios": "^1.8.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
