--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -2,6 +2,37 @@
   "name": "@donohub/api",
   "version": "0.0.1",
   "private": true,
+  "dependencies": {
+    "@clerk/backend": "^1.25.1",
+    "@nestjs/common": "^10.4.15",
+    "@nestjs/config": "^3.3.0",
+    "@nestjs/core": "^10.4.15",
+    "@nestjs/event-emitter": "^3.0.1",
+    "@nestjs/passport": "^10.0.3",
+    "@nestjs/platform-express": "^10.4.15",
+    "@nestjs/swagger": "^7.4.2",
+    "@nestjs/terminus": "^11.0.0",
+    "@supabase/supabase-js": "^2.49.1",
+    "multer": "^1.4.5-lts.2",
+    "nest-winston": "^1.10.2",
+    "openapi3-ts": "^4.4.0",
+    "passport": "^0.7.0",
+    "passport-custom": "^1.1.1",
+    "reflect-metadata": "^0.2.2",
+    "rxjs": "^7.8.2",
+    "winston": "^3.17.0",
+    "@scalar/nestjs-api-reference": "^0.3.189",
+    "express": "^4.21.2"
+  },
+  "devDependencies": {
+    "@nestjs/schematics": "^10.2.3",
+    "@nestjs/testing": "^10.4.15",
+    "@types/express": "^5.0.1",
+    "@types/multer": "^1.4.12",
+    "@types/node": "22.13.10",
+    "webpack-cli": "^6.0.1",
+    "@nx/webpack": "20.5.0"
+  },
   "nx": {
     "targets": {
       "build": {
