--- a/package.json
+++ b/package.json
@@ -9,8 +9,6 @@
   "private": true,
   "devDependencies": {
     "@eslint/js": "^9.22.0",
-    "@nestjs/schematics": "^10.2.3",
-    "@nestjs/testing": "^10.4.15",
     "@nx/eslint": "20.6.0",
     "@nx/eslint-plugin": "20.6.0",
     "@nx/js": "20.5.0",
@@ -19,36 +17,23 @@
     "@nx/react": "^20.5.0",
     "@nx/vite": "20.5.0",
     "@nx/web": "20.5.0",
-    "@nx/webpack": "20.5.0",
     "@swc-node/register": "~1.10.9",
     "@swc/cli": "~0.6.0",
     "@swc/core": "~1.11.8",
     "@swc/helpers": "~0.5.15",
-    "@types/express": "^5.0.1",
-    "@types/multer": "^1.4.12",
-    "@types/node": "22.13.10",
-    "@types/react": "19.0.10",
-    "@types/react-dom": "19.0.4",
-    "@vitejs/plugin-react": "^4.3.4",
-    "@vitest/ui": "^3.0.8",
     "eslint": "^9.22.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "2.31.0",
     "eslint-plugin-jsx-a11y": "6.10.2",
     "eslint-plugin-react": "7.37.4",
     "eslint-plugin-react-hooks": "5.2.0",
-    "jiti": "2.4.2",
-    "jsdom": "~26.0.0",
     "jsonc-eslint-parser": "^2.4.0",
     "nx": "20.5.0",
     "prettier": "^3.5.3",
     "sass": "^1.85.1",
     "tslib": "^2.8.1",
     "typescript": "~5.8.2",
-    "typescript-eslint": "^8.26.0",
-    "vite": "^6.2.1",
-    "vitest": "^3.0.8",
-    "webpack-cli": "^6.0.1"
+    "typescript-eslint": "^8.26.0"
   },
   "workspaces": [
     "packages/*",
@@ -60,51 +45,7 @@
   "dependencies": {
     "@anatine/zod-nestjs": "^2.0.10",
     "@anatine/zod-openapi": "^2.2.7",
-    "@clerk/backend": "^1.25.1",
-    "@clerk/clerk-react": "^5.24.1",
-    "@clerk/localizations": "^3.11.1",
-    "@clerk/themes": "^2.2.20",
-    "@nestjs/common": "^10.4.15",
-    "@nestjs/config": "^3.3.0",
-    "@nestjs/core": "^10.4.15",
-    "@nestjs/event-emitter": "^3.0.1",
-    "@nestjs/passport": "^10.0.3",
-    "@nestjs/platform-express": "^10.4.15",
-    "@nestjs/swagger": "^7.4.2",
-    "@nestjs/terminus": "^11.0.0",
-    "@radix-ui/react-label": "^2.1.2",
-    "@radix-ui/react-slot": "^1.1.2",
-    "embla-carousel-react": "^8.6.0",
-    "@scalar/nestjs-api-reference": "^0.3.189",
-    "@supabase/supabase-js": "^2.49.1",
-    "@tailwindcss/vite": "^4.0.12",
-    "@tanstack/react-form": "^1.0.5",
-    "@tanstack/react-query": "^5.67.2",
-    "@tanstack/react-query-devtools": "^5.73.3",
-    "axios": "^1.8.2",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "express": "^4.21.2",
-    "i18next": "^24.2.2",
-    "i18next-browser-languagedetector": "^8.0.4",
-    "i18next-http-backend": "^3.0.2",
-    "lucide-react": "^0.482.0",
-    "multer": "^1.4.5-lts.2",
-    "nest-winston": "^1.10.2",
-    "openapi3-ts": "^4.4.0",
-    "passport": "^0.7.0",
-    "passport-custom": "^1.1.1",
     "prisma": "^6.5.0",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
-    "react-i18next": "^15.4.1",
-    "react-router-dom": "7.3.0",
-    "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.2",
-    "tailwind-merge": "^3.0.2",
-    "tailwindcss": "^4.0.12",
-    "tailwindcss-animate": "^1.0.7",
-    "winston": "^3.17.0",
     "zod": "^3.24.2"
   }
 }
