--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -7,9 +7,11 @@
     "@clerk/clerk-react": "^5.24.1",
     "@clerk/localizations": "^3.11.1",
     "@clerk/themes": "^2.2.20",
+    "@radix-ui/react-avatar": "^1.1.7",
     "@radix-ui/react-label": "^2.1.2",
-    "@radix-ui/react-slot": "^1.1.2",
-    "embla-carousel-react": "^8.6.0",
+    "@radix-ui/react-select": "^2.2.2",
+    "@radix-ui/react-separator": "^1.1.4",
+    "@radix-ui/react-slot": "^1.2.0",
     "@tailwindcss/vite": "^4.0.12",
     "@tanstack/react-form": "^1.0.5",
     "@tanstack/react-query": "^5.67.2",
@@ -17,17 +19,23 @@
     "axios": "^1.8.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "embla-carousel-react": "^8.6.0",
     "i18next": "^24.2.2",
     "i18next-browser-languagedetector": "^8.0.4",
     "i18next-http-backend": "^3.0.2",
     "lucide-react": "^0.482.0",
+    "moment": "^2.30.1",
+    "next-themes": "^0.4.6",
+    "posthog-js": "^1.236.6",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-i18next": "^15.4.1",
     "react-router-dom": "7.3.0",
+    "sonner": "^2.0.3",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.12",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "use-debounce": "^10.0.4"
   },
   "devDependencies": {
     "@types/react": "19.0.10",
