--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -8,6 +8,7 @@
     "@clerk/localizations": "^3.11.1",
     "@clerk/themes": "^2.2.20",
     "@radix-ui/react-avatar": "^1.1.7",
+    "@radix-ui/react-dialog": "^1.1.11",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-select": "^2.2.2",
     "@radix-ui/react-separator": "^1.1.4",
