notification + sticky navbar + admin pages demo + profile pages demo

--- a/apps/client/tsconfig.app.json
+++ b/apps/client/tsconfig.app.json
@@ -4,6 +4,7 @@
     "outDir": "dist",
     "tsBuildInfoFile": "dist/tsconfig.app.tsbuildinfo",
     "jsx": "react-jsx",
+    "allowJs": true,
     "lib": ["dom"],
     "types": [
       "node",
