--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -13,6 +13,7 @@
     "@radix-ui/react-select": "^2.2.2",
     "@radix-ui/react-separator": "^1.1.4",
     "@radix-ui/react-slot": "^1.2.0",
+    "@radix-ui/react-tooltip": "^1.2.4",
     "@tailwindcss/vite": "^4.0.12",
     "@tanstack/react-form": "^1.0.5",
     "@tanstack/react-query": "^5.67.2",
@@ -46,6 +47,7 @@
     "jiti": "2.4.2",
     "jsdom": "~26.0.0",
     "vite": "^6.2.1",
+    "vite-plugin-pwa": "^1.0.0",
     "vitest": "^3.0.8"
   }
 }
