--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -18,6 +18,7 @@
     "@tanstack/react-form": "^1.0.5",
     "@tanstack/react-query": "^5.67.2",
     "@tanstack/react-query-devtools": "^5.73.3",
+    "@tanstack/react-table": "^8.21.3",
     "axios": "^1.8.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
