--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -7,6 +7,7 @@
     "@clerk/clerk-react": "^5.24.1",
     "@clerk/localizations": "^3.11.1",
     "@clerk/themes": "^2.2.20",
+    "@radix-ui/react-accordion": "^1.2.8",
     "@radix-ui/react-avatar": "^1.1.7",
     "@radix-ui/react-dialog": "^1.1.11",
     "@radix-ui/react-label": "^2.1.2",
@@ -31,13 +32,13 @@
     "next-themes": "^0.4.6",
     "posthog-js": "^1.236.6",
     "react": "19.0.0",
+    "react-cookie": "^8.0.1",
     "react-dom": "19.0.0",
     "react-i18next": "^15.4.1",
     "react-router-dom": "7.3.0",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.12",
-    "tailwindcss-animate": "^1.0.7",
     "use-debounce": "^10.0.4"
   },
   "devDependencies": {
@@ -45,10 +46,22 @@
     "@types/react-dom": "19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
     "@vitest/ui": "^3.0.8",
+    "i18next-resources-for-ts": "^1.6.0",
     "jiti": "2.4.2",
     "jsdom": "~26.0.0",
+    "tailwindcss-animate": "^1.0.7",
     "vite": "^6.2.1",
     "vite-plugin-pwa": "^1.0.0",
     "vitest": "^3.0.8"
+  },
+  "nx": {
+    "targets": {
+      "locale:types": {
+        "command": "i18next-resources-for-ts interface -i ./public/locales/en -o ./src/support/",
+        "options": {
+          "cwd": "apps/client"
+        }
+      }
+    }
   }
 }
