--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -39,7 +39,9 @@
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.12",
-    "use-debounce": "^10.0.4"
+    "use-debounce": "^10.0.4",
+    "vite-plugin-html": "^3.2.2",
+    "vite-plugin-sitemap": "^0.7.1"
   },
   "devDependencies": {
     "@types/react": "19.0.10",
@@ -58,6 +60,12 @@
     "targets": {
       "locale:types": {
         "command": "i18next-resources-for-ts interface -i ./public/locales/en -o ./src/support/",
+        "options": {
+          "cwd": "apps/client"
+        }
+      },
+      "analyze": {
+        "command": "npx vite-bundle-visualizer",
         "options": {
           "cwd": "apps/client"
         }
