nx migration + small fixes + pwa

--- a/nx.json
+++ b/nx.json
@@ -91,5 +91,6 @@
       "dependsOn": ["^build"],
       "inputs": ["production", "^production"]
     }
-  }
+  },
+  "nxCloudId": "681efc652fbe69131fd076a3"
 }
