--- a/package.json
+++ b/package.json
@@ -9,26 +9,26 @@
   "private": true,
   "devDependencies": {
     "@eslint/js": "^9.22.0",
-    "@nx/eslint": "20.6.0",
-    "@nx/eslint-plugin": "20.6.0",
-    "@nx/js": "20.5.0",
-    "@nx/nest": "^20.5.0",
-    "@nx/node": "20.5.0",
-    "@nx/react": "^20.5.0",
-    "@nx/vite": "20.5.0",
-    "@nx/web": "20.5.0",
+    "@nx/eslint": "21.0.3",
+    "@nx/eslint-plugin": "21.0.3",
+    "@nx/js": "21.0.3",
+    "@nx/nest": "21.0.3",
+    "@nx/node": "21.0.3",
+    "@nx/react": "21.0.3",
+    "@nx/vite": "21.0.3",
+    "@nx/web": "21.0.3",
     "@swc-node/register": "~1.10.9",
-    "@swc/cli": "~0.6.0",
+    "@swc/cli": "0.6.0",
     "@swc/core": "~1.11.8",
     "@swc/helpers": "~0.5.15",
     "eslint": "^9.22.0",
-    "eslint-config-prettier": "^9.1.0",
+    "eslint-config-prettier": "10.1.5",
     "eslint-plugin-import": "2.31.0",
     "eslint-plugin-jsx-a11y": "6.10.2",
     "eslint-plugin-react": "7.37.4",
     "eslint-plugin-react-hooks": "5.2.0",
     "jsonc-eslint-parser": "^2.4.0",
-    "nx": "20.5.0",
+    "nx": "21.0.3",
     "prettier": "^3.5.3",
     "sass": "^1.85.1",
     "tslib": "^2.8.1",
