--- a/apps/client/tsconfig.app.json
+++ b/apps/client/tsconfig.app.json
@@ -35,7 +35,7 @@
     "eslint.config.cjs",
     "eslint.config.mjs"
   ],
-  "include": ["src/**/*.js", "src/**/*.jsx", "src/**/*.ts", "src/**/*.tsx"],
+  "include": ["src/**/*.js", "src/**/*.jsx", "src/**/*.ts", "src/**/*.tsx", "public/service-worker.js"],
   "references": [
     {
       "path": "../../packages/shared/tsconfig.lib.json"
