--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,7 +22,7 @@ jobs:
         node-version: 20
         cache: 'npm'
     - run: npm ci
-    - run: npx nx run @donohub/api:build:production
+    - run: npx nx run @donohub/api:build:production --skip-nx-cache
 
   build-client:
     runs-on: ubuntu-latest
@@ -35,4 +35,4 @@ jobs:
         node-version: 20
         cache: 'npm'
     - run: npm ci
-    - run: npx nx run @donohub/client:build:production
+    - run: npx nx run @donohub/client:build:production --skip-nx-cache
