--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -12,8 +12,10 @@
     "@nestjs/platform-express": "^10.4.15",
     "@nestjs/swagger": "^7.4.2",
     "@nestjs/terminus": "^11.0.0",
+    "@nestjs/throttler": "^6.4.0",
     "@scalar/nestjs-api-reference": "^0.3.189",
     "@supabase/supabase-js": "^2.49.1",
+    "cookie-parser": "^1.4.7",
     "express": "^4.21.2",
     "multer": "^1.4.5-lts.2",
     "nest-winston": "^1.10.2",
@@ -29,6 +31,7 @@
     "@nestjs/schematics": "^10.2.3",
     "@nestjs/testing": "^10.4.15",
     "@nx/webpack": "20.5.0",
+    "@types/cookie-parser": "^1.4.8",
     "@types/express": "^5.0.1",
     "@types/multer": "^1.4.12",
     "@types/node": "22.13.10",
