--- a/nx.json
+++ b/nx.json
@@ -16,7 +16,9 @@
     {
       "plugin": "@nx/js/typescript",
       "options": {
-        "typecheck": { "targetName": "typecheck" },
+        "typecheck": {
+          "targetName": "typecheck"
+        },
         "build": {
           "targetName": "build",
           "configName": "tsconfig.lib.json",
@@ -26,7 +28,12 @@
       },
       "exclude": ["packages/prisma/*"]
     },
-    { "plugin": "@nx/eslint/plugin", "options": { "targetName": "lint" } },
+    {
+      "plugin": "@nx/eslint/plugin",
+      "options": {
+        "targetName": "lint"
+      }
+    },
     {
       "plugin": "@nx/vite/plugin",
       "options": {
@@ -54,7 +61,11 @@
     {
       "plugin": "@nx/js/typescript",
       "include": ["packages/prisma/*"],
-      "options": { "typecheck": { "targetName": "typecheck" } }
+      "options": {
+        "typecheck": {
+          "targetName": "typecheck"
+        }
+      }
     }
   ],
   "generators": {
@@ -65,8 +76,13 @@
         "linter": "eslint",
         "bundler": "vite"
       },
-      "component": { "style": "scss" },
-      "library": { "style": "scss", "linter": "eslint" }
+      "component": {
+        "style": "scss"
+      },
+      "library": {
+        "style": "scss",
+        "linter": "eslint"
+      }
     }
   },
   "targetDefaults": {
@@ -74,9 +90,13 @@
       "cache": true,
       "dependsOn": ["^build"],
       "inputs": ["production", "^production"]
+    },
+    "@nx/esbuild:esbuild": {
+      "cache": true,
+      "dependsOn": ["^build"],
+      "inputs": ["production", "^production"]
     }
   },
-  "nxCloudId": "681efd6f897b13e904e82815",
   "tui": {
     "enabled": false
   }
