--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "private": true,
   "devDependencies": {
     "@eslint/js": "^9.22.0",
+    "@nx/esbuild": "21.1.0",
     "@nx/eslint": "21.1.0",
     "@nx/eslint-plugin": "21.1.0",
     "@nx/js": "21.1.0",
@@ -17,10 +18,15 @@
     "@nx/react": "21.1.0",
     "@nx/vite": "21.1.0",
     "@nx/web": "21.1.0",
+    "@nx/webpack": "21.1.0",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
+    "@svgr/webpack": "^8.0.1",
     "@swc-node/register": "~1.10.9",
     "@swc/cli": "0.6.0",
     "@swc/core": "~1.11.8",
     "@swc/helpers": "~0.5.15",
+    "@types/node": "~18.16.9",
+    "esbuild": "^0.19.2",
     "eslint": "^9.22.0",
     "eslint-config-prettier": "10.1.5",
     "eslint-plugin-import": "2.31.0",
@@ -30,10 +36,12 @@
     "jsonc-eslint-parser": "^2.4.0",
     "nx": "21.1.0",
     "prettier": "^3.5.3",
+    "react-refresh": "^0.10.0",
     "sass": "^1.85.1",
     "tslib": "^2.8.1",
     "typescript": "~5.8.2",
-    "typescript-eslint": "^8.26.0"
+    "typescript-eslint": "^8.26.0",
+    "webpack-cli": "^5.1.4"
   },
   "workspaces": [
     "packages/*",
