ai validation + lang change + prevent to many rerenders + comments page

--- a/apps/api/tsconfig.app.json
+++ b/apps/api/tsconfig.app.json
@@ -19,6 +19,9 @@
   "exclude": ["eslint.config.js", "eslint.config.cjs", "eslint.config.mjs"],
   "references": [
     {
+      "path": "../../packages/validatorLib/tsconfig.lib.json"
+    },
+    {
       "path": "../../packages/shared/tsconfig.lib.json"
     }
   ]
