--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -16,6 +16,8 @@
     "@scalar/nestjs-api-reference": "^0.3.189",
     "@supabase/supabase-js": "^2.49.1",
     "cookie-parser": "^1.4.7",
+    "eventsource": "^4.0.0",
+    "eventsource-client": "^1.1.3",
     "express": "^4.21.2",
     "multer": "^1.4.5-lts.2",
     "nest-winston": "^1.10.2",
