--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -10,6 +10,9 @@
   "include": [],
   "references": [
     {
+      "path": "../../packages/validatorLib"
+    },
+    {
       "path": "../../packages/shared"
     },
     {
