--- a/packages/validatorLib/tsconfig.json
+++ b/packages/validatorLib/tsconfig.json
@@ -4,10 +4,7 @@
   "include": [],
   "references": [
     {
-      "path": "../../packages/validatorLib"
-    },
-    {
-      "path": "./tsconfig.app.json"
+      "path": "./tsconfig.lib.json"
     }
   ]
 }
