--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -16,6 +16,7 @@
     "@scalar/nestjs-api-reference": "^0.3.189",
     "@supabase/supabase-js": "^2.49.1",
     "cookie-parser": "^1.4.7",
+    "eventemitter2": "^6.4.9",
     "eventsource": "^4.0.0",
     "eventsource-client": "^1.1.3",
     "express": "^4.21.2",
@@ -27,6 +28,7 @@
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.2",
     "svix": "^1.64.1",
+    "web-push": "^3.6.7",
     "winston": "^3.17.0"
   },
   "devDependencies": {
@@ -37,6 +39,7 @@
     "@types/express": "^5.0.1",
     "@types/multer": "^1.4.12",
     "@types/node": "22.13.10",
+    "@types/web-push": "^3.6.4",
     "webpack-cli": "^6.0.1"
   },
   "nx": {
