remove microservice + included validator in the monolith '

--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -10,7 +10,7 @@
   "include": [],
   "references": [
     {
-      "path": "../../packages/validatorLib"
+      "path": "../../packages/validator"
     },
     {
       "path": "../../packages/shared"
