--- a/packages/validator/package.json
+++ b/packages/validator/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@donohub/validatorLib",
+  "name": "@donohub/validator",
   "version": "0.0.1",
   "private": true,
   "main": "./dist/index.js",
@@ -14,17 +14,11 @@
     }
   },
   "nx": {
-    "name": "@donohub/validatorLib"
+    "name": "@donohub/validator"
   },
   "dependencies": {
-    "@trpc/server": "^11.1.2",
-    "axios": "^1.9.0",
-    "envalid": "^8.0.0",
-    "ms": "^2.1.3",
+    "effect": "^3.16.3",
     "openai": "^4.102.0",
     "tslib": "^2.3.0"
-  },
-  "devDependencies": {
-    "@types/ms": "^2.1.0"
   }
 }
